- Fixed header height - Added more containers to see if overflow was working and it wasn't, so need to check that. - Changed names of songs/albums and artists in new containers, just need to update photos - removed focus:outline for search bar - Fixed header to top of page and moved main down to maintain display - Updated background of main-right to better match where the gradient starts, just need to get it fixed so the gradient moves with the scroll - Adjusted the colour of trending-link1 in containers to white

--- a/webdev-projects/styles/spotify-header-footer.css
+++ b/webdev-projects/styles/spotify-header-footer.css
@@ -1,10 +1,14 @@
 header {
   display: flex;
   flex-direction: row;
-  min-height: 3em;
+  min-height: 4em;
   justify-content: center;
   align-items: center;
-  margin-top: 0;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  background-color: black;
 }
 
 nav {
@@ -41,10 +45,16 @@ input {
   font-size: 1em;
   color: white;
   border: none;
+  height: auto;
 }
 
 input::placeholder {
   color: var(--trending-link1);
+}
+
+input:focus {
+  outline: none;
+  border-radius: 50px;
 }
 
 .browse-icon {
@@ -79,7 +89,7 @@ input::placeholder {
   border-radius: 30px;
   border: none;
   font-size: 1em;
-  font-weight: 600;
+  font-weight: 800;
   padding: 1em 2em;
 }
 
